<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:contentDescription="@string/floating_action_button_camera"
        android:focusable="true"
        android:onClick="takePhoto"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonLocation"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButtonLocation"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButtonLocation"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/floating_action_button_location"
        android:focusable="true"
        android:onClick="getLocation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_mylocation" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:contentDescription="@string/floating_action_button_save"
        android:focusable="true"
        android:onClick="savePhotoAndLocToDB"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonCamera"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButtonCamera"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButtonCamera"
        app:srcCompat="@android:drawable/ic_menu_save" />
</androidx.constraintlayout.widget.ConstraintLayout>